# batpak

./: .cbmignore  .codebase-memory.json  .dockerignore  .editorconfig  .gitattributes  .gitignore  000_REPO_MAP.md  001_BATPAK.md  002_SYNCBAT.md  002_SYNCBAT_RUNTIME.md  003_CLAWBAT.md  003_CLAWBAT_KIT.md  003_NETBAT_NETWORK.md  004_NETBAT.md  004_NETBAT_NETWORK.md  010_USER_GUIDE.md  01_FACTORY.md  020_TECHNICAL_REFERENCE.md  025_VOCABULARY.md  02_MODEL.md  030_RELEASE_RUNBOOK.md  03_INVARIANTS.md  040_TESTING_DOCTRINE.md  041_TESTING_LEDGER.md  04_BATTERIES.md  050_SECURITY.md  05_TERMINALS.md  060_CONTRIBUTING.md  06_EVENTS.md  080_EVIDENCE_REPORTS.md  099_DECISION_INDEX.md  09_REPLAY.md  100_ADR_0001_SYNC_ONLY_STORE.md  100_ADR_0002_SINGLE_WRITER_THREAD.md  100_ADR_0009_POSITION_HINTS_AND_ARTIFACT_UPGRADES.md  100_ADR_0011_REACTOR_CANAL.md  100_ADR_0013_SUBSTRATE_OWNER_PERFORMANCE_FINDINGS.md  100_ADR_0014_DURABLE_FRONTIER.md  100_ADR_0016_DURABILITY_GATING.md  100_ADR_0019_CANONICAL_ENCODING_CONTRACT.md  (+47 more)
batpak/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  TUNING.md  build.rs  clippy.toml  deny.toml  justfile
batpak-macros/: Cargo.toml
batpak-macros/src/: lib.rs
batpak/.cargo/: config.toml  mutants.toml
batpak/.config/: nextest.toml
batpak/.github/workflows/: ci.yml
batpak/benches/: cold_start.rs  compaction.rs  projection_latency.rs  subscription_fanout.rs  write_throughput.rs
batpak/docs/adr/: ADR-0002-single-writer-thread.md  ADR-0003-cache-safety-assumptions.md  ADR-0004-compaction-concurrency.md  ADR-0005-test-support-surface.md  ADR-0006-restart-policy.md
batpak/examples/: chat_room.rs  dungeon_typestate.rs  event_sourced_counter.rs  policy_gates.rs
batpak/scripts/: bench-report  coverage-feedback
batpak/src/: lib.rs  prelude.rs  wire.rs
batpak/src/coordinate/: mod.rs  position.rs
batpak/src/event/: hash.rs  header.rs  kind.rs  sourcing.rs
batpak/src/guard/: denial.rs  receipt.rs
batpak/src/outcome/: combine.rs  error.rs  mod.rs  wait.rs
batpak/src/pipeline/: bypass.rs  mod.rs
batpak/src/store/: mod.rs  projection.rs  reader.rs  segment.rs  writer.rs
batpak/src/typestate/: mod.rs
batpak/tests/: bigbang_compliance.rs  chaos_testing.rs  config_propagation.rs  coverage_gaps.rs  event_api.rs  fuzz_chaos_feedback.rs  fuzz_targets.proptest-regressions  fuzz_targets.rs  gate_pipeline.rs  hash_chain.rs  monad_laws.rs  outcome_combinators.rs  perf_gates.rs  projection_cache.rs  quiet_stragglers.rs  self_benchmark.rs  store_advanced.rs  store_integration.rs  store_properties.rs  subscription_ops.rs  typestate_safety.rs  wire_format.rs
batpak/tests/golden/: coordinate_v1.hex
batpak/tests/ui/: forge_receipt.rs  forge_receipt.stderr  invalid_transition.rs  invalid_transition.stderr
batpak/tools/integrity/: Cargo.toml
bpk-lib/: .phase0-audit-report.md  Cargo.toml  clippy.toml  deny.toml
bpk-lib/.cargo/: config.toml  mutants.toml
bpk-lib/.config/: nextest.toml
bpk-lib/crates/batpak-examples/: Cargo.toml  README.md
bpk-lib/crates/bench-support/: Cargo.toml  README.md
bpk-lib/crates/bvisor/: Cargo.toml
bpk-lib/crates/clawbat/: Cargo.toml
bpk-lib/crates/core/: Cargo.toml  README.md  build.rs
bpk-lib/crates/examples/: Cargo.toml
bpk-lib/crates/hbat/: Cargo.toml  README.md
bpk-lib/crates/hostbat/: Cargo.toml
bpk-lib/crates/macros/: Cargo.toml  README.md
bpk-lib/crates/macros-support/: Cargo.toml  README.md
bpk-lib/crates/netbat/: Cargo.toml  README.md
bpk-lib/crates/refbat/: Cargo.toml  README.md
bpk-lib/crates/syncbat/: Cargo.toml  README.md
bpk-lib/crates/syncbat-macros/: Cargo.toml  README.md
bpk-lib/crates/testkit/: Cargo.toml
bpk-lib/fuzz/: .gitignore  Cargo.toml
bpk-lib/fuzz/fuzz_targets/: cache_meta.rs  checkpoint_data.rs  checkpoint_snapshot_v6.rs  frame_decode.rs  hidden_ranges.rs  mmap_entry.rs  mmap_index_load.rs  projection_state.rs  segment_header.rs  sidx_entry.rs  sidx_footer.rs
bpk-lib/templates/artifact-envelope/: Cargo.toml
bpk-lib/templates/audit-read-report/: Cargo.toml  README.md
bpk-lib/templates/backup-envelope/: Cargo.toml  README.md
bpk-lib/templates/minimal-app/: Cargo.toml  README.md
bpk-lib/templates/minimal-store/: Cargo.toml
bpk-lib/templates/projection-cache/: Cargo.toml  README.md
bpk-lib/templates/registry-row/: Cargo.toml  README.md
bpk-lib/templates/reservation-ledger/: Cargo.toml
bpk-lib/templates/state-transition/: Cargo.toml  README.md
bpk-lib/templates/typed-reactor/: Cargo.toml  README.md
bpk-lib/tools/integrity/: Cargo.toml
bpk-lib/tools/shared/: no_runtime_scanner.rs  shared_checks.rs
bpk-lib/tools/xtask/: Cargo.toml
bpk-lib/traceability/: agent_surface.yaml  artifacts.yaml  assurance_levels.yaml  capability_snapshot.yaml  compat_matrix.yaml  complexity_ratchet.yaml  concept_catalog.yaml  dependency_direction.yaml  dst_corpus.yaml  fitness_functions.yaml  flows.yaml  invariant_citation_waivers.yaml  invariants.yaml  model_bindings.yaml  mutation_debt.yaml  observations.yaml  platform_qualification_matrix.yaml  product_doctrine_audit.yaml  pub_item_allowlist.yaml  requirements.yaml  seam_registry.yaml  testing_ledger.yaml  unsafe_ledger.yaml  wallclock_allowlist.yaml
bpk-lib/traceability/public_api/: batpak.txt  batpak_semver_checklist.yaml  netbat.txt  netbat_semver_checklist.yaml  syncbat.txt  syncbat_semver_checklist.yaml
bpk-lib/traceability/releases/: 0.9.0.yaml
crates/bench-support/: Cargo.toml  README.md
crates/bench-support/src/: lib.rs
crates/core/: Cargo.toml  build.rs
crates/core/benches/: ancestry_walk.rs  frontier_waiters.rs  projection_latency.rs  subscription_fanout.rs
crates/core/build_support/: shared_checks.rs
crates/core/examples/: README.md  append_with_gate.rs  caller_defined_gates.rs  chat_room.rs  event_sourced_counter.rs  lifecycle_observer.rs  outbox.rs  policy_gates.rs  quickstart.rs  (+3 more)
crates/macros/: Cargo.toml  README.md
fixtures/downstream/: Cargo.toml
fixtures/kind-collision-composer/: Cargo.toml
tools/integrity/: Cargo.toml
tools/xtask/: Cargo.toml
(+1730 files in other folders)
