[package]
name = "batpak"
version = "0.5.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Event sourcing with causal graphs and policy gates. Sync API, zero async."
repository = "https://github.com/TheFreeBatteryFactory/batpak"
homepage = "https://github.com/TheFreeBatteryFactory/batpak"
documentation = "https://docs.rs/batpak"
readme = "README.md"
keywords = ["event-sourcing", "audit-trail", "causal-graph", "hash-chain", "policy-engine"]
categories = ["database", "concurrency"]
exclude = [
    ".devcontainer/**",
    ".github/**",
    "AGENTS.md",
    "docs/**",
    "guide/**",
    "scripts/**",
    "templates/**",
    "tools/**",
    "traceability/**",
]

[workspace]
members = ["tools/integrity", "tools/xtask"]
default-members = ["."]
resolver = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["blake3"]
blake3 = ["dep:blake3"]
dangerous-test-hooks = ["dep:fastrand"]

[dependencies]
uuid = { version = "1", features = ["v7"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
blake3 = { version = "1", optional = true }
flume = "0.12"
crc32fast = "1"
rmp-serde = "1"
dashmap = "5"
parking_lot = "0.12"
tracing = "0.1"
memmap2 = "0.9"
rayon = "1.10"
fastrand = { version = "2", optional = true }
tempfile = "3"
# NO TOKIO. Invariant 1.

[dev-dependencies]
proptest = "1"
arbitrary = { version = "1", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
trybuild = "1"
fastrand = "2"
serial_test = "3.4.0"
loom = "0.7"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
wildcard_enum_match_arm = "warn"
assertions_on_constants = "deny"
disallowed_methods = "deny"
large_enum_variant = "warn"
clone_on_ref_ptr = "warn"
needless_pass_by_value = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "warn"

[lints.rust]
deprecated = "deny"

[[bench]]
name = "write_throughput"
harness = false

[[bench]]
name = "cold_start"
harness = false

[[bench]]
name = "projection_latency"
harness = false

[[bench]]
name = "compaction"
harness = false

[[bench]]
name = "subscription_fanout"
harness = false

[[bench]]
name = "unified_bench"
harness = false

[[bench]]
name = "batch_throughput"
harness = false

# Profile settings (NOT in .cargo/config.toml — they're ignored there)
[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"

[profile.test]
opt-level = 1

[profile.bench]
inherits = "release"
debug = true
