[workspace]
members = [
    "crates/core",
    "tools/integrity",
    "tools/xtask",
    "crates/macros-support",
    "crates/macros",
    "crates/bench-support",
]
default-members = ["crates/core"]
resolver = "2"

# Profile settings (NOT in .cargo/config.toml — they're ignored there)
[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"

[profile.test]
opt-level = 1
debug = 1
incremental = true

[profile.bench]
inherits = "release"
debug = true
