[workspace]
members = [
    "crates/core",
    "tools/integrity",
    "tools/xtask",
    "crates/macros-support",
    "crates/macros",
    "crates/bench-support",
    "crates/syncbat-macros",
    "crates/syncbat",
    "crates/downstream-kit",
    "crates/netbat",
]
default-members = ["crates/core"]
resolver = "2"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
panic = "deny"
needless_return = "deny"
print_stdout = "deny"
print_stderr = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
wildcard_enum_match_arm = "warn"
assertions_on_constants = "deny"
disallowed_methods = "deny"
large_enum_variant = "warn"
clone_on_ref_ptr = "warn"
needless_pass_by_value = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "warn"

[workspace.lints.rust]
deprecated = "deny"

# Profile settings (NOT in .cargo/config.toml — they're ignored there)
[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"

[profile.test]
opt-level = 1
debug = 1
incremental = true

[profile.bench]
inherits = "release"
debug = true
