[workspace]
members = [
    "crates/core",
    "tools/integrity",
    "tools/xtask",
    "crates/macros-support",
    "crates/macros",
    "crates/bench-support",
    "crates/syncbat-macros",
    "crates/syncbat",
    "crates/netbat",
    "crates/refbat",
    "crates/bvisor",
]
# The cargo-fuzz crate (`fuzz/`) is its own workspace: it pulls in nightly-only
# libfuzzer-sys / -Z build-std machinery and a `-C panic=abort` profile that
# must NOT leak into the main workspace's build graph or feature unification.
# It depends on `crates/core` by path, so it always fuzzes the real code.
exclude = [
    "fuzz",
]
default-members = ["crates/core"]
resolver = "2"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
panic = "deny"
needless_return = "deny"
print_stdout = "deny"
print_stderr = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
wildcard_enum_match_arm = "warn"
assertions_on_constants = "deny"
disallowed_methods = "deny"
large_enum_variant = "warn"
clone_on_ref_ptr = "warn"
needless_pass_by_value = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "warn"

[workspace.lints.rust]
deprecated = "deny"
# Gauntlet Phase 0B sentinel RED fixtures compile only under this cfg (set via
# RUSTFLAGS="--cfg gauntlet_red_fixture"); it is intentionally NOT a Cargo
# feature so `--all-features` never enables a fixture designed to fail. Register
# it here so the every-PR build does not warn/deny on the unexpected cfg.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(gauntlet_red_fixture)'] }

# Profile settings (NOT in .cargo/config.toml — they're ignored there)
[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"
# Storage-engine posture: a silent integer wrap is a correctness bug we want to
# surface as a loud panic, not let corrupt durable state in production. The
# overhead is negligible against an opt-level=3, LTO build. (Behavior changes
# only on code that would otherwise have wrapped — i.e. on a bug.)
overflow-checks = true

[profile.test]
opt-level = 1
debug = 1
incremental = true

[profile.bench]
inherits = "release"
debug = true
# Benches measure throughput; keep overflow checks out of the hot path so the
# numbers reflect release behavior, not the safety posture above.
overflow-checks = false
