# Gauntlet Phase 0B — SENTINEL S1: cargo-fuzz smoke harness.
#
# This is a standalone (workspace-excluded) cargo-fuzz crate. It depends on the
# real `batpak` core crate by PATH, so every target fuzzes production code, not a
# copy. cargo-fuzz builds it with the nightly toolchain, libFuzzer sanitizer
# coverage, and `-C panic=abort` so a panic is caught as a crash.
[package]
name = "batpak-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# `batpak` exposes `store::segment::{frame_decode, frame_encode}` publicly, so
# the path dep reaches the real frame_decode entry point with no test-hook shim.
# The GAUNT-FUZZ-1 targets (every other on-disk/untrusted decode surface) call
# the doc-hidden `batpak::__fuzz::*` contract, which lives behind the
# `dangerous-test-hooks` feature — enable it here so the whole target set builds.
batpak = { path = "../crates/core", features = ["dangerous-test-hooks"] }

[lints.rust]
# Mirror of the core crate's gauntlet RED fixture switch, gated behind the
# `--cfg gauntlet_red_fixture` compile flag (NOT a Cargo feature). When set, the
# frame_decode target plants a deliberate panic on a known input so the harness
# can PROVE it catches a crash (tool qualification / non-vacuity). OFF on every
# normal/CI fuzz run. Registered here so the default build does not warn on the
# unexpected cfg.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(gauntlet_red_fixture)'] }

# cargo-fuzz crates must NOT be in the parent workspace (nightly-only build-std +
# panic=abort). Declaring an empty `[workspace]` here makes this dir its own root.
[workspace]

[profile.release]
debug = 1

# One bin target per fuzz entry point. `test = false`/`doc = false`/`bench =
# false` are the cargo-fuzz convention: these are libFuzzer harness binaries,
# not test/doc/bench targets.
[[bin]]
name = "frame_decode"
path = "fuzz_targets/frame_decode.rs"
test = false
doc = false
bench = false

# GAUNT-FUZZ-1 — one bin per `batpak::__fuzz::*` contract fn. Same cargo-fuzz
# convention as frame_decode (test/doc/bench = false: libFuzzer harness bins).
[[bin]]
name = "segment_header"
path = "fuzz_targets/segment_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sidx_entry"
path = "fuzz_targets/sidx_entry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "checkpoint_data"
path = "fuzz_targets/checkpoint_data.rs"
test = false
doc = false
bench = false

[[bin]]
name = "checkpoint_snapshot_v6"
path = "fuzz_targets/checkpoint_snapshot_v6.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mmap_entry"
path = "fuzz_targets/mmap_entry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cache_meta"
path = "fuzz_targets/cache_meta.rs"
test = false
doc = false
bench = false

[[bin]]
name = "projection_state"
path = "fuzz_targets/projection_state.rs"
test = false
doc = false
bench = false

[[bin]]
name = "hidden_ranges"
path = "fuzz_targets/hidden_ranges.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mmap_index_load"
path = "fuzz_targets/mmap_index_load.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sidx_footer"
path = "fuzz_targets/sidx_footer.rs"
test = false
doc = false
bench = false
