[package]
name = "batpak-macros"
version = "0.7.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
publish = false

[lib]
proc-macro = true

[dependencies]
batpak-macros-support = { path = "../macros-support", version = "0.7.0" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
