[package]
name = "batpak-integrity"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
cargo_metadata = "0.18"
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.11"
regex = "1"
serde = { version = "1", features = ["derive"] }
yaml_serde = "0.10.4"
syn = { version = "2", features = ["full"] }
walkdir = "2"
