[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
base16ct = { version = "1.0", features = ["alloc"] }
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.13"
crc32fast = "1"
memmap2 = "0.9"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
tempfile = "3"
toml = "1.1"
