[package]
name = "batpak-integrity"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
cargo_metadata = "0.18"
clap = { version = "4.5", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
syn = { version = "2", features = ["full"] }
walkdir = "2"
