[package]
name = "batpak-examples"
version = "0.8.3"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Runnable usage demos for the batpak family (not published). Family-wide demo home — binaries under src/bin/, no per-crate examples/ folders."
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
batpak = { path = "../core", version = "0.8.3" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = ">=3.24, <3.25"
flume = "0.12"
# Pinned to the line batpak uses so example-forged bytes match store output.
rmp-serde = "=1.3.1"

[lints]
workspace = true
