[package]
name = "batpak-bench-support"
version = "0.9.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Criterion benchmark support helpers for batpak."
repository = "https://github.com/freebatteryfactory/batpak"
homepage = "https://github.com/freebatteryfactory/batpak"
documentation = "https://docs.rs/batpak-bench-support"
readme = "README.md"
keywords = ["event-sourcing", "benchmark"]
categories = ["development-tools::profiling"]

[lints]
workspace = true

[dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
