[package]
name = "bvisor"
version = "0.8.3"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Publish-false boundary supervisor: platform-agnostic boundary contract (types + fail-closed planner + honest InertBackend). ZERO OS code, ZERO BatPak writes in the trait."
publish = false

[lib]
path = "src/lib.rs"

[features]
default = []
# The SimBackend monster + the harness-owned GroundTruth shadow + the
# reconciliation matrix live behind this feature, mirroring batpak's
# `store/sim` convention (`crates/core/Cargo.toml`). Without it the whole
# `sim/` module is compiled out and the crate stays the pure contract + Inert.
# Pulls in batpak's matching gate so the sim path reuses core's canonical
# deterministic `SimClock` (`batpak::store::SimClock`) instead of carrying a
# duplicate `Clock` impl.
dangerous-test-hooks = ["batpak/dangerous-test-hooks"]
# The QF_BV solver harness (kernel plan §4): an EXTERNAL, PINNED, CLOUD-ONLY SMT
# tool that discharges the admission-circuit equivalence proof. Gated so the solver
# never runs on the local potato — CI runs `cargo test --features qf-bv` with pinned
# z3/cvc5 (BVISOR_Z3 / BVISOR_CVC5). The pure SMT GENERATOR is always compiled and
# unit-tested locally; only the solver-invoking harness is behind this feature.
qf-bv = []
# Host wiring (kernel plan §11): mount the boundary contract as ONE hostbat
# `HostModule` over a `syncbat::Core`. Off by default — the pure `contract/` is
# the crate's identity; `host` adds the syncbat handlers + the hostbat module so
# bvisor never grows its own host architecture (there is NO `bvisor-host` crate).
host = ["dep:syncbat", "dep:hostbat"]
# Per-platform OS boundary backends (kernel plan §10 / SCOPE backend-ladder).
# OFF by default — the pure contract + Inert is the crate's identity. Each gates
# the OS-touching backend STRUCT + unsafe basement; the honest `support_matrix()`
# data is ALWAYS compiled regardless of feature, so the per-platform honesty
# tables stay cross-platform testable. Real OS deps land per build-ladder step in
# the matching `[target.'cfg(target_os="..")'.dependencies]` table below.
backend-linux = []
backend-wasm = []
backend-windows = []
backend-macos = []

[dependencies]
# batpak by path for the EventPayload derive + inventory registration and the
# canonical encoding / blake3 hash helpers reused for report sealing. The `blake3`
# default feature backs `event::hash::compute_hash`, which seals report bodies.
# The contract itself stays OS-free and writes no BatPak.
batpak = { path = "../core", version = "0.8.3" }
serde = { version = "1", features = ["derive"] }
# Named in report/plan seal signatures: batpak's canonical encoder returns
# `rmp_serde::encode::Error`, mirrored here exactly as core's *ReportBody does.
# Pinned to the same line core pins so the canonical bytes stay byte-identical.
rmp-serde = "=1.3.1"
# Host wiring (the `host` feature). The runtime layer bvisor mounts into and the
# generic module host that composes it; both optional so the default build stays
# the pure, OS-free, host-free contract.
syncbat = { path = "../syncbat", version = "0.8.3", optional = true }
hostbat = { path = "../hostbat", version = "0.8.3", optional = true }

[dev-dependencies]
# The `host` end-to-end proof opens a real batpak Store in a tempdir to witness
# the PERSIST leg (request → admit → execute → seal → persist).
tempfile = ">=3.24, <3.25"

# ── Per-platform backend deps (cfg-gated so a Linux build never resolves the
# Windows/macOS crates). EMPTY in scaffolding (step a) — the real `optional=true`
# deps land per build-ladder step:
#   Linux  (step b): libc, landlock, seccompiler  — gated `backend-linux`
#   Windows (step d): windows-sys                 — gated `backend-windows`
#   macOS  (step e): libc (Seatbelt extern)       — gated `backend-macos`
# Wasm (step c) deps (wasmi / wasmtime) are host-OS-independent, so they live in
# the plain `[dependencies]` behind `backend-wasm`, not in a target table.
[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(target_os = "windows")'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]

[lints]
workspace = true
